--- a/fonte/coruja/meu_coruja/css/tabela.css
+++ b/fonte/coruja/meu_coruja/css/tabela.css
@@ -5,7 +5,7 @@
   table {
     border: 1px solid #ccc;
     width: 100%;
-    margin:0;
+    margin:auto;
     padding:0;
     border-collapse: collapse;
     border-spacing: 0;
