Pequeno ajuste no destaque da página atual do menu

--- a/fonte/coruja/meu_coruja/css/estilo.css
+++ b/fonte/coruja/meu_coruja/css/estilo.css
@@ -137,7 +137,10 @@ body {
 {
    background-color:#c74438;
 }
-.link1 li#link1 a:hover
+.link1 li#link1 a:hover,
+.link2 li#link2 a:hover,
+.link3s li#link3 a:hover,
+.link4 li#link4 a:hover
 {
    color: white !important; 
 }
