Dados estáticos para entrevista de Usabilidade

--- a/fonte/coruja/meu_coruja/css/estilo.css
+++ b/fonte/coruja/meu_coruja/css/estilo.css
@@ -139,7 +139,7 @@ body {
 }
 .link1 li#link1 a:hover,
 .link2 li#link2 a:hover,
-.link3s li#link3 a:hover,
+.link3 li#link3 a:hover,
 .link4 li#link4 a:hover
 {
    color: white !important; 
