Página pendências, seu endpoint e adição de tooltips para o nome das disciplinas em suas siglas

--- a/fonte/coruja/meu_coruja/css/estilo.css
+++ b/fonte/coruja/meu_coruja/css/estilo.css
@@ -268,6 +268,8 @@ header,
   position: relative;
   z-index: 2;
   cursor: pointer;
+  display: inline-block;
+  
 }
 
 /* Hide the tooltip content by default */
@@ -278,6 +280,7 @@ header,
   filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
   pointer-events: none;
+  
 }
 
 /* Position tooltip above the element */
