Criação da tela de mensagens

--- a/fonte/coruja/meu_coruja/css/estilo.css
+++ b/fonte/coruja/meu_coruja/css/estilo.css
@@ -132,14 +132,16 @@ body {
 .link1 li#link1,
 .link2 li#link2,
 .link3 li#link3,
-.link4 li#link4
+.link4 li#link4,
+.link5 li#link5
 {
    background-color:#c74438;
 }
 .link1 li#link1 a:hover,
 .link2 li#link2 a:hover,
 .link3 li#link3 a:hover,
-.link4 li#link4 a:hover
+.link4 li#link4 a:hover,
+.link5 li#link5 a:hover
 {
    color: white !important; 
 }
