[Mensagens] • Adicionada função para exibição das mensagens mais recentes dada uma quantidade.
[Boletim]
• Agora exibe Critérios de Avaliação dinamicamente.

[Diagrama de Classes]
• O diagrama foi atualizado.

--- a/fonte/coruja/meu_coruja/css/tabela.css
+++ b/fonte/coruja/meu_coruja/css/tabela.css
@@ -5,11 +5,11 @@
   table {
     border: 1px solid #ccc;
     width: 100%;
-    margin:auto;
+    /*margin: auto;*/
+    margin-bottom: 50px;
     padding:0;
     border-collapse: collapse;
     border-spacing: 0;
-
   }
 
   table tr {
