--- a/fonte/coruja/meu_coruja/css/login.css
+++ b/fonte/coruja/meu_coruja/css/login.css
@@ -51,3 +51,31 @@ body {
 	  border-top-right-radius: 0;
 	}
 }
+
+.loader {
+    border: 6px solid #f3f3f3; /* Light grey */
+    border-top: 6px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.buttonload {
+    background-color: #4CAF50; /* Green background */
+    border: none; /* Remove borders */
+    color: white; /* White text */
+    padding: 12px 24px; /* Some padding */
+    font-size: 16px; /* Set a font-size */
+}
+
+.fa {
+    margin-left: -12px;
+    margin-right: 8px;
+    display: none;
+}
